--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=a5e1f64798e48f4a630405606cc2b325
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/TestWeMovies?serverVersion=5.7"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=pass
+###< lexik/jwt-authentication-bundle ###
